force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Campo para inserção das fotografias dos Corretores Unimed</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando Aprovação</fullName>
            </value>
            <value>
                <fullName>Em Elaboração</fullName>
            </value>
            <value>
                <fullName>Finalizada com Pendência</fullName>
            </value>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>Aguardando Análise</fullName>
            </value>
            <value>
                <fullName>Em Análise com Pendência;</fullName>
            </value>
            <value>
                <fullName>Em Análise de Documentos</fullName>
            </value>
            <value>
                <fullName>Aguardando Resolução de Checklist</fullName>
            </value>
            <value>
                <fullName>Em Triagem</fullName>
            </value>
            <value>
                <fullName>Devolvido pelo Agendamento</fullName>
            </value>
            <value>
                <fullName>A Iniciar Triagem</fullName>
            </value>
            <value>
                <fullName>Em Agendamento de Perícia Médica</fullName>
            </value>
            <value>
                <fullName>Re-Agendar Perícia Médica</fullName>
            </value>
            <value>
                <fullName>Em Perícia Médica</fullName>
            </value>
            <value>
                <fullName>A Iniciar Perícia Médica</fullName>
            </value>
            <value>
                <fullName>Em Assinatura de Termo</fullName>
            </value>
            <value>
                <fullName>Aguardando Entrega de Termo de CPT</fullName>
            </value>
            <value>
                <fullName>A Iniciar Esclarecimento Médico por Telefone</fullName>
            </value>
            <value>
                <fullName>Em Esclarecimento Médico por Telefone</fullName>
            </value>
            <value>
                <fullName>Em Esclarecimento Médico por Telefone (Segunda Tentativa)</fullName>
            </value>
            <value>
                <fullName>A Iniciar Segunda Tentativa de Contato de Esclarecimento</fullName>
            </value>
            <value>
                <fullName>Retorno de Exames Solicitados</fullName>
            </value>
            <value>
                <fullName>Em Recebimento de Exames e Documentos</fullName>
            </value>
            <value>
                <fullName>Aguardando Entrega de Exames e Documentos</fullName>
            </value>
            <value>
                <fullName>Ciclo de Contato de Perícia Médica</fullName>
            </value>
            <value>
                <fullName>Termo Rejeitado pelo Cliente</fullName>
            </value>
            <value>
                <fullName>A Iniciar Agendamento de Assinatura Termo</fullName>
            </value>
            <value>
                <fullName>Em Agendamento de Assinatura de Termo</fullName>
            </value>
            <value>
                <fullName>Cliente não Assinou Termo Eletrônico Dentro do Prazo</fullName>
            </value>
            <value>
                <fullName>Cliente não compareceu para Assinar Termo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>