force-app/main/default/objects/Opportunity/fields/SUPERVISOR__c.field-meta.xml
<CustomField>
    <fullName>SUPERVISOR__c</fullName>
    <formula>Meta__r.IDSupervisor__r.FirstName &amp;&quot; &quot;&amp; Meta__r.IDSupervisor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Supervisor</label>
    <type>Text</type>
</CustomField>