force-app/main/default/objects/Opportunity/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <formula>TEXT(Account.TipoCliente__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de cliente</label>
    <type>Text</type>
</CustomField>