force-app/main/default/objects/Opportunity/fields/TipoInclusao__c.field-meta.xml
<CustomField>
    <fullName>TipoInclusao__c</fullName>
    <label>Tipo de inclusão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>