force-app/main/default/objects/Opportunity/fields/TipoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>TipoOportunidade__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Oportunidade</label>
    <type>Text</type>
</CustomField>