force-app/main/default/objects/Opportunity/recordTypes/Enterprise.recordType-meta.xml
<RecordType>
    <fullName>Enterprise</fullName>
    <active>true</active>
    <businessProcess>Enterprise</businessProcess>
    <label>Enterprise</label>
</RecordType>