force-app/main/default/objects/Opportunity/validationRules/VR_01_OPP_MascaraCPF.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_01_OPP_MascaraCPF</fullName>
    <active>true</active>
    <description>Máscara do campo CPF</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules)
&amp;&amp;
AND(
NOT(
ISBLANK( CPF__c )
),
NOT(
REGEX( CPF__c , &quot;^([0-9]{3}\\.[0-9]{3}\\.[0-9]{3}\\-[0-9]{2})|(\\d{11})|([0-9]{3}\\.[0-9]{3}\\.[0-9]{3}\\/[0-9]{2})$&quot;)
)
)</errorConditionFormula>
    <errorMessage>O CPF deve ser inserido no formato: xxx.xxx.xxx-xx.</errorMessage>
</ValidationRule>