force-app/main/default/objects/Opportunity/validationRules/VR_02_OPP_MascaraCNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_02_OPP_MascaraCNPJ</fullName>
    <active>true</active>
    <description>Máscara do campo CNPJ</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules)
&amp;&amp;
AND(
NOT(ISBLANK(CNPJ__c)),
NOT(REGEX( CNPJ__c , &quot;^([0-9]{2}\\.[0-9]{3}\\.[0-9]{3}\\/[0-9]{4}\\-[0-9]{2})|(\\d{14})$&quot;)))</errorConditionFormula>
    <errorMessage>O CNPJ deve ser inserido no formato: xx.xxx.xxx/xxxx-xx</errorMessage>
</ValidationRule>