force-app/main/default/objects/Opportunity/validationRules/VR_04_OPP_MascaraCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_04_OPP_MascaraCelular</fullName>
    <active>true</active>
    <description>Máscara do campo celular</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules)
&amp;&amp;
NOT(ISBLANK(Celular__c))
&amp;&amp;
!REGEX(Celular__c  ,&quot;^(\\([0-9]{2}\\)\\ [0-9]{4,5}\\-[0-9]{4})|(\\d{8,13})$&quot;)</errorConditionFormula>
    <errorMessage>O Celular deve estar no seguinte formato: (xx)xxxxx-xxxx</errorMessage>
</ValidationRule>