force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Porte__c</columns>
    <columns>NumeroVidas__c</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>DataVigenciaContrato__c</columns>
    <columns>Canal2__c</columns>
    <columns>CanalEntrada__c</columns>
    <columns>QtdeOdonto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Canal2__c</field>
        <operation>equals</operation>
        <value>GVEN - CONSULTORES,LOJAS AUTORIZADAS,LOJAS PRÓPRIAS</value>
    </filters>
    <label>Todas as Oportunidades</label>
</ListView>